objects/FSL_Setup_Resource_Accesses__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_Name__c</fullName>
        <label>Access Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dispatcher</fullName>
                </value>
                <value>
                    <fullName>Gantt</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                    <default>true</default>
                    <label>Basic</label>
                </value>
                <value>
                    <fullName>Create New Account</fullName>
                </value>
                <value>
                    <fullName>Time Entry Edit</fullName>
                </value>
                <value>
                    <fullName>Create New Maintenance Plan</fullName>
                </value>
                <value>
                    <fullName>Complete Forms</fullName>
                </value>
                <value>
                    <fullName>Crew Manager</fullName>
                </value>
                <value>
                    <fullName>Advanced CICO</fullName>
                </value>
                <value>
                    <fullName>Technican CICO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Permission_Set_ID__c</fullName>
        <label>Permission Set ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                    <default>true</default>
                    <label>Advanced</label>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Bay</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                    <isActive>false</isActive>
                    <label>Tech</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FSL Setup Resource Accesses</label>
    <listViews>
        <fullName>All_Recs</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Access_Name__c</columns>
        <columns>FSL_Permission_Set_ID__c</columns>
        <columns>Resource_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recs</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>FSL Setup Resource Accesses</pluralLabel>
</CustomObject>